--- a/hw2/hw2_submission.tex
+++ b/hw2/hw2_submission.tex
@@ -69,8 +69,8 @@ backgroundcolor = \color{light-yellow}
 \end{centering}
 \vspace{0.25cm}
 
-\textbf{Andrew ID:} \texttt{Write your Andrew ID here.} \\
-\textbf{Collaborators:} \texttt{Write the Andrew IDs of your collaborators here (if any).}\\ 
+\textbf{Andrew ID:} \texttt{kkabeer} \\
+\textbf{Collaborators:} \texttt{asenathi}\\ 
 \textbf{NOTE:} Please do \textbf{NOT} change the sizes of the answer blocks or plots.
 
 \setcounter{section}{4}
@@ -110,14 +110,14 @@ python rob831/scripts/run_hw2.py --env_name CartPole-v0 -n 100 -b 5000 \
 \begin{answer}[title=Q5.1.2.1,height=9.5cm,width=\linewidth]
 % TODO
 \centering
-\includegraphics[height=8cm]{example-image-a}
+\includegraphics[height=8cm]{graphs/irl_ass2_q1_g1.png}
 \end{answer}
 
 \subsubsubsection{Large batch -- \lbrack5 points\rbrack}
 \begin{answer}[title=Q5.1.2.2,height=9.5cm,width=\linewidth]
 % TODO
 \centering
-\includegraphics[height=8cm]{example-image-a}
+\includegraphics[height=8cm]{graphs/irl_ass2_q1_g2.png}
 \end{answer}
 
 \subsubsection{Analysis}
