--- a/hw3/hw3_submission.tex
+++ b/hw3/hw3_submission.tex
@@ -69,23 +69,23 @@ backgroundcolor = \color{light-yellow}
 \end{centering}
 \vspace{0.25cm}
 
-\textbf{Andrew ID:} \texttt{Write your Andrew ID here.} \\
-\textbf{Collaborators:} \texttt{Write the Andrew IDs of your collaborators here (if any).}\\ 
+\textbf{Andrew ID:} \texttt{kkabeer} \\
+\textbf{Collaborators:} \texttt{asenathi}\\ 
 \textbf{NOTE:} Please do \textbf{NOT} change the sizes of the answer blocks or plots.
 
 \setcounter{section}{0}
 \section{Question 1: DQN and DDQN (LunarLander-v3)}
 \begin{answer}[title=Question 1,height=9.5cm,width=\linewidth]
-% TODO
+    
 \centering
-\includegraphics[height=8cm]{example-image-a}
+\includegraphics[height=8cm]{plot.png}
 \end{answer}
 
 \section{Question 2: Actor-Critic (CartPole-v0)}
 \begin{answer}[title=Question 2,height=9.5cm,width=\linewidth]
 % TODO
 \centering
-\includegraphics[height=8cm]{example-image-a}
+\includegraphics[height=8cm]{q2.png}
 \end{answer}
 
 
@@ -94,7 +94,7 @@ backgroundcolor = \color{light-yellow}
 \begin{answer}[title=Question 3,height=9.5cm,width=\linewidth]
 % TODO
 \centering
-\includegraphics[height=8cm]{example-image-a}
+\includegraphics[height=8cm]{q3.png}
 \end{answer}
 
 
